--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tech.webp" />
+
+    <link rel="icon" type="image/webp" href="/tech.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anton Cherednichenko</title>
   </head>
